Fix footer spacing and font sizes

--- a/source/stylesheets/basics/_sizes.css
+++ b/source/stylesheets/basics/_sizes.css
@@ -11,7 +11,9 @@ $spacer-section: calc($spacer * 4);
 $border-radius: 20px;
 
 $font-size-larger: 1.3rem;
+$font-size-regular: 1.3rem;
 $font-size-in-element: 0.9rem;
+$font-size-smaller: 0.9rem;
 $font-small: 0.8rem;
 $line-height-regular: 1.4rem;
 $line-height-small: 1.2rem;
